<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:weightSum="10"
        android:background="@color/teal_200">

        <Button
            android:id="@+id/btn_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/small_btn"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_big"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/big_button"
            android:textColor="@color/white"
            android:layout_weight="5"
            tools:ignore="NestedWeights" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="70"
        android:background="@drawable/compass">
        <Button
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/btn_north"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/north"
            android:layout_marginTop="@dimen/five_dp"/>
        <Button
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_south"
            android:text="@string/south"
            android:layout_marginBottom="@dimen/five_dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_east"
            android:text="@string/east"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_west"
            android:text="@string/west"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_center"
            android:text="@string/center"
            android:layout_centerInParent="true"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_ne"
            android:text="@string/ne"
            android:layout_below="@id/btn_north"
            android:layout_above="@id/btn_east"
            android:layout_toEndOf="@id/btn_north"
            android:layout_toStartOf="@id/btn_east"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_nw"
            android:text="@string/nw"
            android:layout_below="@id/btn_north"
            android:layout_above="@id/btn_west"
            android:layout_toEndOf="@id/btn_west"
            android:layout_toStartOf="@id/btn_north"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_se"
            android:text="@string/se"
            android:layout_below="@id/btn_east"
            android:layout_above="@id/btn_south"
            android:layout_toEndOf="@id/btn_south"
            android:layout_toStartOf="@id/btn_east"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_sw"
            android:text="@string/sw"
            android:layout_below="@id/btn_west"
            android:layout_above="@id/btn_south"
            android:layout_toEndOf="@id/btn_west"
            android:layout_toStartOf="@id/btn_south"/>
    </RelativeLayout>

</LinearLayout>